# sspc-flutter-fe

./: LICENSE  README.md
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/components/: default_sliver_app_bar_title.dart
app/lib/data/: style.dart
app/lib/screens/: modal_accept.dart  modal_accept_channel.dart  modal_channel_open.dart  modal_close.dart  modal_connect_wallet.dart  modal_dispute.dart  modal_pending_tx.dart  modal_propose.dart  modal_qr_scan.dart  modal_read_message.dart  modal_reject.dart  modal_reject_channel.dart  modal_show_qr_code.dart  screen_account.dart  screen_channel_detail_screen.dart  screen_dispute.dart  screen_history_channels.dart  screen_new_channel.dart
app/lib/services/: Channel.abi.json  Channel.g.dart  database.dart  ethereum_connect.dart  formatting.dart  link.dart  network.dart  platform.dart  platform_io.dart  platform_stub.dart  platform_web.dart  walletconnect.dart
app/web/: index.html
backend/: .gitignore  Cargo.toml  Channel.abi.json
backend/.sqlx/: query-1921805361e28e3eed8119481aeb6fee5dd5985bb478f7cb504792c082917ae1.json  query-ad6addcdf7c92a38cbc9a6530c9f6789fd0266d705cb127a776b18caf06036cf.json
backend/migrations/: 20231118083033_initial.up.sql
backend/src/: chain_listener.rs  main.rs  notification.rs  state.rs
backend/src/calls/: check_app.rs  mod.rs  register_app.rs  unregister_app.rs
contract/: fe.toml
contract/src/: main.fe
ecdsa/: fe.toml
ecdsa/src/: lib.fe
safe_recover/: fe.toml
safe_recover/src/: lib.fe
(+3 files in other folders)
