[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ethers = { version = "2.0.11", default-features = false, features = ["rustls", "ws", "abigen"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.4.8" , features = ["derive"]}
color-eyre = "0.6.2"
url = { version = "2.4.1", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros" ] }
reqwest = { version = "0.11.22", default-features = false, features = [ "rustls-tls" ] }
futures = "0.3.29"
serde_json = "1.0.108"
